<resources>
    <string name="app_name">Darius</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up_label">Sign up</string>
    <string name="don_t_have_any_account">Don\'t have any account ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">back to login</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="please_verify_that_your_email_address_is">Please verify that your email address is</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network1">Rinkeby</string>
    <string name="network2">Mainnet</string>
    <string name="network3">Kovan</string>
    <string name="network4">Gorli</string>
    <string name="changeEmail1">New Email is Missing</string>
    <string name="changeEmail2">New Email is not Validated</string>
</resources>