<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_normal_3"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/log_login_email"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_input_text"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextLog" />

    <TextView
        android:id="@+id/log_fg_pass"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#F97F39"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_login_btn" />

    <TextView
        android:id="@+id/log_signup"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_up_label"
        android:textColor="#F97F39"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dontHaveAccountLog"
        app:layout_constraintTop_toBottomOf="@+id/orTextLog" />

    <TextView
        android:id="@+id/dontHaveAccountLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/don_t_have_any_account"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTextLog" />

    <Button
        android:id="@+id/log_login_btn"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/bg_yellow"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_login_password" />

    <EditText
        android:id="@+id/log_login_password"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_input_text"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLog" />

    <TextView
        android:id="@+id/passwordTextLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_login_email" />

    <TextView
        android:id="@+id/orTextLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/or"
        android:textColor="#9F4A2B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_login_btn" />

    <TextView
        android:id="@+id/emailTextLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/log_error_email"
        android:layout_width="173dp"
        android:layout_height="17dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="end|right"
        android:textColor="#FB0000"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/log_login_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_error_pass"
        android:layout_width="173dp"
        android:layout_height="17dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="end|right"
        android:textColor="#FB0000"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/log_login_password"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="316dp"
        android:layout_height="293dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login" />

</androidx.constraintlayout.widget.ConstraintLayout>